# phpchallenge37

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Calculator/: BuzzwordPercentCalculator.cpp  BuzzwordPercentCalculator.h
Counter/: BuzzwordCounter.cpp  BuzzwordCounter.h  WordCounter.cpp  WordCounter.h
Formatter/: BuzzwordStringFormatter.cpp  BuzzwordStringFormatter.h
Provider/: BuzzwordProvider.cpp  BuzzwordProvider.h
resources/: buzzwords.txt
